# Gomuko

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO.md
GameNetworkingSockets/: CMakeLists.txt
agent_build/: CMakeCache.txt  Makefile  cmake_install.cmake  train_agent
agent_training/: DQN.py  DQN_Agent.py  DQN_vis  game.py  test.py  train.py
agent_training/trained_models/: 3x3_1500_iterations_state_dict.pkl  long_2.2_3x3_1500_iterations_state_dict.pkl  long_2_3x3_1500_iterations_state_dict.pkl  long_3x3_1500_iterations_state_dict.pkl  test_3x3_1500_iterations_state_dict.pkl  unvalid_action_3x3_1500_iterations_state_dict.pkl
alpha_zero/: AZeroNN.h  AZeroNNParallel.h  CMakeCache.txt  CMakeLists.txt  CustomDataset.h  DataAugmentation.h  Gomoku.cpp  Gomoku.h  MCTS.cpp  MCTS.h  Model.h  ModelParallel.h  PlayOut.h  Trainer.cpp  Trainer.h  main.cpp  test  test.cpp
alpha_zero/models/: state_dict.pt
alpha_zero/test/: CMakeCache.txt
alpha_zero_build/: CMakeCache.txt  Makefile  alpha_zero  cmake_install.cmake  install_manifest.txt
alpha_zero_build/include/alpha_zero/: MCTS.h  Model.h  ModelParallel.h  Trainer.h
build_client/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client  cmake_install.cmake  test
build_client/src/Game_Client/: cmake_install.cmake
build_server/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client  cmake_install.cmake  server
builds/client/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/client/.cmake/api/v1/reply/: cache-v2-72964e86c5eedfcb41aa.json  cmakeFiles-v1-d06ef95e333a5cb128e8.json  codemodel-v2-00aa3a9e3fcc0dec3f4c.json  codemodel-v2-72a5f4b4adafc018b7c2.json  (+12 more)
builds/client/GameNetworkingSockets/: Makefile  cmake_install.cmake
builds/client/alpha_zero/: Makefile  cmake_install.cmake
builds/client/src/Game_Client/: Makefile  cmake_install.cmake
builds/client/src/Networking/: Makefile  cmake_install.cmake
builds/server/: CMakeCache.txt  Makefile  cmake_install.cmake  server
builds/server/GameNetworkingSockets/: Makefile  cmake_install.cmake
builds/server/alpha_zero/: Makefile  cmake_install.cmake
builds/server/src/Game_Client/: Makefile  cmake_install.cmake
builds/server/src/Game_Common/: Makefile  cmake_install.cmake
builds/server/src/Game_Server/: Makefile  cmake_install.cmake
builds/server/src/Networking/: Makefile  cmake_install.cmake
net_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  test  test2
python_scripts/: DQN.py  DQN_Agent.py  game.py  train.py
src/: Game  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Map  Matrix.hpp  Networking.cpp  SendAction.hpp  TextureManager.cpp  Vector2D.hpp  main  main.cpp
src/ECS/: ECS.cpp  MatrixPositionComponent.hpp  PlayerComponent.hpp
src/Events/: Event.hpp  EventQueue.hpp  MouseClickEvent.hpp
src/Game_Client/: CMakeLists.txt  ChatUtils.h  Game  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  NetworkingClient.hpp  TextureManager.cpp  TextureManager.hpp  Textures.hpp  VectorMatrix.hpp  main.cpp
src/Game_Client/ECS/: ButtonComponent.hpp  Components.hpp  ECS.cpp  ECS.hpp  FunctionComponent.hpp  MultilineTextComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TextFieldComponent.cpp  TextFieldComponent.hpp
src/Game_Client/Events/: Event.hpp  EventConversion.hpp  GameStateEvent.hpp  KeyDownEvent.hpp  MouseButtonPressedEvent.hpp  NetworkConnectionEvent.hpp  TextEvent.hpp  TextInputEvent.hpp
src/Game_Client/Layers/: BackgroundLayer.cpp  ChatLayer.cpp  ChatLayer.hpp  Layer.cpp  LayerStack.hpp  MainMenuLayer.cpp  MainMenuLayer.hpp  PieceLayer.hpp
src/Game_Client/Players/: AZero.h  GameController.h  LocalPlayer.h  Player.h  RemotePlayer.h
src/Game_Client/Scenes/: GomokuScene.cpp  GomokuScene.hpp  MainMenu.cpp  MainMenu.hpp  Scene.hpp
src/Game_Common/: CMakeLists.txt  Game  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Matrix.hpp  Networking.hpp  SendAction.hpp  TextureManager  TextureManager.cpp  TextureManager.hpp  Textures.hpp  Vector2D.cpp  VectorMatrix.hpp  main  main.cpp  maintest.cpp
src/Game_Common/ECS/: Components.hpp  ECS.hpp  FunctionComponent.hpp  MatrixPositionComponent.hpp  OwnershipComponent.hpp  RectComponent.hpp
src/Game_Common/Events/: Event.hpp  EventConversionFactory.hpp  MouseButtonPressedEvent.hpp
src/Game_Common/Layers/: BackgroundLayer.cpp  BackgroundLayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  MainMenuLayer.cpp  MainMenuLayer.hpp  PieceLayer.cpp  PieceLayer.hpp
src/Game_Common/Players/: AZero.h  GameController.h
src/Game_Common/Scenes/: GomokuScene.cpp  GomokuScene.hpp  Gomuko.cpp  Gomuko.hpp  MainMenu.cpp  MainMenu.hpp  Scene.hpp  SceneManager.hpp
src/Game_Server/: CMakeLists.txt  NetworkingServer.hpp  main  main.cpp
src/Layers/: BackgroundLayer.cpp  BackgroundLayer.hpp  Layer.hpp  Layerinclude.hpp  PieceLayer.cpp  PieceLayer.hpp
src/Networking/: CMakeLists.txt  MessageTypes.h  Networking.h  NetworkingClient.h  NetworkingEvents.h  Package.h  SenderID.h  Serializer.h
test_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client  cmake_install.cmake  server
test_build/src/Game_Server/: cmake_install.cmake
test_build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  server
test_build2/GameNetworkingSockets/: cmake_install.cmake
test_build2/src/Game_Common/: cmake_install.cmake
test_build2/src/Game_Server/: cmake_install.cmake
test_client/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  single_player
test_client/GameNetworkingSockets/: cmake_install.cmake
test_client/src/Game_Common/: cmake_install.cmake
test_install_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  single_player
test_install_build/GameNetworkingSockets/: cmake_install.cmake
test_install_build/src/Game_Common/: cmake_install.cmake
test_single_player/: CMakeCache.txt  build.ninja  cmake_install.cmake
test_single_player/src/Game_Client/: cmake_install.cmake
unused_files/: GameStatePackaging.hpp  Matrix.hpp
(+26 files in other folders)
